# trabalho-2-GabrielGRCosta

./: .gitignore  CMakeLists.txt  README.md  README1.md
data/: script2  script3
include/: canaltexto.h  mensagem.h  servidor.h  sistema.h  usuario.h
src/: canaltexto.cpp  mensagem.cpp  servidor.cpp  sistema.cpp  usuario.cpp
src1/: servidor.cpp
